--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src="images/portfolio_pic.jpg" alt="" /></a>
 								<header>
 									<h2>Justice Bole</h2>
 									<p>Software developer</p>
