--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						<!-- Footer -->
 						<section id="footer">
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/JusticeBole" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/justice-bole" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/justice-bole/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a target="_blank" rel="noopener noreferrer" href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+								<li><a target="_blank" rel="noopener noreferrer" href="mailto: justicebole@yahoo.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 					</header>
@@ -98,7 +98,7 @@
 						<section class="blurb" id="contact">
 							<h2>How to reach me</h2>
 							<p>I'm always happy to talk to and connect with others!</p>
-							<p>If you have any questions or inquiries e-mail me at <b>justicebole@yahoo.com</b>.</p>
+							<p>If you have any questions or inquiries e-mail me at <a href = "mailto: justicebole@yahoo.com">justicebole@yahoo.com</a>.</p>
 						</section>
 
 						<section class="blurb" id="projects">
