--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/JusticeBole" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/justice-bole" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/justice-bole/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a target="_blank" rel="noopener noreferrer" href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+								<!-- <li><a target="_blank" rel="noopener noreferrer" href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li> -->
 								<li><a target="_blank" rel="noopener noreferrer" href="mailto: justicebole@yahoo.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
@@ -53,7 +53,7 @@
 								</header>
 								<a href="#" class="image featured"><img src="images/stockholm_pic.jpg" alt="" /></a>
 								<p>
-									My name's Justice; I'm a software developer that creates games and applications using
+									My name's Justice; I'm a Software Engineer that creates games and applications using
 									real-time 3D creation tools like Unity and Unreal Engine. I believe that games and virtual simulations
 									have the capability to provide experiences unlike any other medium. Whether your completely
 									immersed in a games story and world building, or using augmented/virtual reality to
@@ -90,7 +90,7 @@
 								<a href="#" class="logo"><img src="images/portfolio_pic.jpg" alt="" /></a>
 								<header>
 									<h2>Justice Bole</h2>
-									<p>Software developer</p>
+									<p>Software Engineer</p>
 								</header>
 							</section>
 
