--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 									<li>
 										<article>
 											<header>
-												<h3><a href="#">Zombie Survival with Godot</a></h3>
+												<h3><a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame">Zombie Survival with Godot</a></h3>
 											</header>
-											<a href="#" class="image"><img src="images/zombie_pic.jpg" alt="" /></a>
+											<a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame" class="image"><img src="images/zombie_pic.jpg" alt="" /></a>
 										</article>
 									</li>
 									<li>
