feat: Add github and itch buttons to projects

--- a/index.html
+++ b/index.html
@@ -112,15 +112,26 @@
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
-												<h3><a href="https://github.com/justice-bole/Poseidon">Project Poseidon</a></h3>
+												<h3><a href="https://github.com/justice-bole/Poseidon">Poseidon - C# Unity Game</a></h3>
+												<ul class="actions">
+													<li><a href="https://github.com/justice-bole/Poseidon" class="button small fit">GitHub</a></li>
+													<li><a href="https://justice-bole.itch.io/poseidon" class="button small fit">Play on Itch</a></li>
+												</ul>
 											</header>
 											<a href="https://github.com/justice-bole/Poseidon" class="image"><img src="images/poseidon_pic.jpg" alt="" /></a>
+											<footer>
+											
+											</footer>
 										</article>
 
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
-												<h3><a href="https://github.com/justice-bole/Tower-Knights">Tower Knights</a></h3>
+												<h3><a href="https://github.com/justice-bole/Tower-Knights">Tower Knights - C# Unity Game</a></h3>
+												<ul class="actions">
+													<li><a href="https://github.com/justice-bole/Tower-Knights" class="button small fit">GitHub</a></li>
+													<li><a href="https://justice-bole.itch.io/tower-knights" class="button small fit">Play on Itch</a></li>
+												</ul>
 											</header>
 											<a href="https://github.com/justice-bole/Tower-Knights" class="image"><img src="images/tk_pic.jpg" alt="" /></a>
 										</article>
@@ -128,15 +139,11 @@
 									<!-- Mini Post -->
 										<article class="mini-post">
 											<header>
-												<h3><a href="https://github.com/justice-bole/Love2D-Projects/tree/main/platformer">Platformer made with LÖVE</a></h3>
-											</header>
-											<a href="https://github.com/justice-bole/Love2D-Projects/tree/main/platformer" class="image"><img src="images/platformer_pic.jpg" alt="" /></a>
-										</article>
-
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="https://github.com/justice-bole/FPS-Controller">FPS Character Controller</a></h3>
+												<h3><a href="https://github.com/justice-bole/FPS-Controller">FPS Character Controller - C# Unity Asset</a></h3>
+												<ul class="actions">
+													<li><a href="https://github.com/justice-bole/FPS-Controller" class="button small fit">GitHub</a></li>
+													<li><a href="https://justice-bole.itch.io/fps-character-controller" class="button small fit">Download on Itch</a></li>
+												</ul>
 											</header>
 											<a href="https://github.com/justice-bole/FPS-Controller" class="image"><img src="images/fps_pic.jpg" alt="" /></a>
 										</article>
@@ -144,12 +151,26 @@
 									<!-- Mini Post -->
 									<article class="mini-post">
 										<header>
-											<h3><a href="https://github.com/justice-bole/Raylib-Projects/tree/main/Dodger">Dodger</a></h3>
+											<h3><a href="https://github.com/justice-bole/Raylib-Projects/tree/main/Dodger">Dodger - C++ Raylib Game</a></h3>
+											<ul class="actions">
+												<li><a href="https://github.com/justice-bole/Raylib-Projects/tree/main/Dodger" class="button small fit">GitHub</a></li>
+												<li><a href="https://justice-bole.itch.io/dodger" class="button small fit">Play on Itch</a></li>
+											</ul>
 										</header>
 										<a href="https://github.com/justice-bole/Raylib-Projects/tree/main/Dodger" class="image"><img src="images/dodger.jpg" alt="" /></a>
 									</article>
+
+									<!-- Mini Post -->
+									<article class="mini-post">
+										<header>
+											<h3><a href="https://github.com/justice-bole/Love2D-Projects/tree/main/platformer">2D Platformer with Lua & LÖVE</a></h3>
+										</header>
+										<a href="https://github.com/justice-bole/Love2D-Projects/tree/main/platformer" class="image"><img src="images/platformer_pic.jpg" alt="" /></a>
+									</article>
 								</div>
 							</section>
+
+							
 
 						<!-- Posts List -->
 							<section>
@@ -157,7 +178,7 @@
 									<li>
 										<article>
 											<header>
-												<h3><a href="https://github.com/justice-bole/Love2D-Projects/tree/main/pong">Pong Made With LÖVE</a></h3>
+												<h3><a href="https://github.com/justice-bole/Love2D-Projects/tree/main/pong">Pong with Lua & LÖVE</a></h3>
 											</header>
 											<a href="https://github.com/justice-bole/Love2D-Projects/tree/main/pong" class="image"><img src="images/pong_pic.jpg" alt="" /></a>
 										</article>
@@ -165,7 +186,7 @@
 									<li>
 										<article>
 											<header>
-												<h3><a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame">Zombie Survival with Godot</a></h3>
+												<h3><a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame">Zombie Survival with Godot & GDScript</a></h3>
 											</header>
 											<a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame" class="image"><img src="images/zombie_pic.jpg" alt="" /></a>
 										</article>
@@ -173,7 +194,7 @@
 									<li>
 										<article>
 											<header>
-												<h3><a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame">Command Line Black Jack</a></h3>
+												<h3><a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame">Command Line Black Jack with C++</a></h3>
 											</header>
 											<a href="https://github.com/justice-bole/Godot-Projects/tree/main/ZombieGame" class="image"><img src="images/cl_blackjack.jpg" alt="" /></a>
 										</article>
@@ -181,7 +202,7 @@
 									<li>
 										<article>
 											<header>
-												<h3><a href="https://github.com/justice-bole/CPP-Projects/tree/main/Learncpp/MonsterBattles">Command Line RPG</a></h3>
+												<h3><a href="https://github.com/justice-bole/CPP-Projects/tree/main/Learncpp/MonsterBattles">Command Line RPG with C++</a></h3>
 											</header>
 											<a href="https://github.com/justice-bole/CPP-Projects/tree/main/Learncpp/MonsterBattles" class="image"><img src="images/cl_rpg.jpg" alt="" /></a>
 										</article>
