Add Flash Chat Post

--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
 										</header>
 										<a href="https://github.com/justice-bole/Love2D-Projects/tree/main/platformer" class="image"><img src="images/platformer_pic.jpg" alt="" /></a>
 									</article>
+
+									<!-- Mini Post -->
+									<article class="mini-post">
+										<header>
+											<h3><a href="https://github.com/justice-bole/FlutterApps/tree/main/flash-chat">Flash Chat - Dart & Flutter App</a></h3>
+										</header>
+										<a href="https://github.com/justice-bole/FlutterApps/tree/main/flash-chat" class="image"><img src="images/flash_chat.jpg" alt="" /></a>
+									</article>
 								</div>
 							</section>
 
